# ALFRED_II-Y-II

./: .env (II-Y-II).txt  .gitignore  ALFRED.spec  ALFRED_BRAIN_BENCHMARK.md  ALFRED_BRAIN_INFOGRAPHIC.md  ALFRED_BRAIN_LEARNING_GUIDE.md  ALFRED_BRAIN_QUICK_REFERENCE.md  ALFRED_BRAIN_TEST_RESULTS.md  ALFRED_CHAT_IMPLEMENTATION.md  ALFRED_CHAT_QUICK_START.md  ALFRED_CHAT_SETUP_GUIDE.md  ALFRED_IP_PROTECTION_LEGAL.md  ALFRED_SELF_GOVERNANCE_GUIDE.md  Bug Bounty how too.txt  CLAUDE.md  COMPLETE_SENSORY_INTEGRATION_SUMMARY.md  DEPLOY.md  ERROR_FIXES_SUMMARY.md  HACKERONE BACKUP CODES.txt  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_ALFRED.md  INSTALL_LOCAL_TERMINAL.md  INSTALL_RYAN_VOICE.md  INTEGRATION_COMPLETE.md  LAUNCH_POSTS.md  LICENSE  Launch ALfred.txt  MCP_SERVERS_COMPLETE.md  MIGRATION_TO_NEW_PC.md  MONEY_GUIDE.md  Modelfile.ALFRED  Money-Making Arsenal.txt  NEXT_STEPS.md  PATENT_TRACKING.md  PROJECT_SUMMARY.md  Procfile  QUICK_REFERENCE_BRAIN_LEARNING.md  README.md  SECURITY_AND_PATENT_ACTION_PLAN.md  (+74 more)
.claude/: settings.local.json
PATENTS/: 00_PATENT_PORTFOLIO_MASTER.md
agents/: __init__.py  autonomous_agents.py  security_agent.py
ai/: __init__.py  ai_personalities.py  multimodel.py
alfred/: __init__.py  __main__.py  client.py
bounty_results/: amazon_vrp_authenticated_20251229.md  bounty_report_20251225_041124.md  bounty_report_20251225_041233.md  bounty_report_20251225_042130.md  bounty_report_20251225_042800.md  bounty_report_20251225_091727.md  bounty_report_20251225_091836.md  bounty_report_20251225_091917.md  bounty_report_20251227_111352.md  (+9 more)
(+211 files in other folders)
